--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -68,6 +68,10 @@ html, body {
     overflow-wrap: break-word;
 }
 
+.red-border {
+    border: 1px solid red;
+}
+
 #player-form {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
@@ -204,37 +208,44 @@ footer {
     text-shadow: #000000 1px 0 10px;
 }
 
-#skills-stats {
-    text-align: center;
-}
-
-#slayer-stats, .slayer-boss-killed {
+#slayer-cards, .slayer-boss-killed {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(3, 1fr);
     grid-row-gap: 10px;
     grid-column-gap: 10px;
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
+}
+
+#slayer-title-container {
+    width: 100%;
+    display: inline-flex;
+    justify-content: center;
+}
+
+#slayer-title-container img {
+    margin-right: 5px;
 }
 
 .slayer-boss-div {
     background-color: rgba(9, 8, 8, 0.6);
     color: white;
 
-    border: 2px solid black;
     border-radius: 5px;
-}
 
-.boss-title, .boss-xp {
-    text-align: center;
+    --bg-clr: rgba(255, 255, 255, 0.45);
+    box-shadow: 6px 4px 20px -4px var(--bg-clr);
+    -webkit-box-shadow: 6px 4px 20px -4px var(--bg-clr);
+    -moz-box-shadow: 6px 4px 20px -4px var(--bg-clr);
+
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
 }
 
 .slayer-separator {
     width: 40%;
     margin-left: 30%;
-    border: 1px solid black;
-    color: black;
+    border: 1px solid white;
+    color: white;
 }
 
 .slayer-boss-killed {
@@ -264,11 +275,10 @@ footer {
 
 .fish-card {
     border-radius: 5px;
-    width: auto;
-}
+    background-color: rgba(9, 8, 8, 0.6);
 
-.fish-card h3 {
-    text-align: center;
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
 }
 
 .trophy-count {
@@ -276,4 +286,24 @@ footer {
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(2, 1fr);
     text-align: center;
+}
+
+@media screen and (max-width: 978px) {
+    #slayer-cards, .slayer-boss-killed {
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 650px) {
+    #slayer-cards {
+        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+        height: min-content;
+    }
+
+    .slayer-boss-killed {
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
