--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
     });
 </script>
 <div id="video-container">
-	<video id="background-video" playsinline autoplay muted loop>
+	<video id="background-video" playsinline autoplay muted loop loa>
 		<source src="/video/background.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
