--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>SBStats | Home</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="{{ url_for('images', path='favicon.png') }}">
+	<link rel="icon" href="./assets/images/favicon.png">
 	<link href="{{ url_for('style', path='style.css') }}" rel="stylesheet">
 </head>
 <body>
