--- a/templates/stats.html
+++ b/templates/stats.html
@@ -24,24 +24,34 @@
 	<p class="center"><strong>Purse:</strong> -</p>
 {% endif %}
 {% if leveling_data != None %}
+<div class="icon-text">
+	<img src="{{ leveling_data["Global"]["icon_path"] }}" alt="{{ skill }} Icon" width="30" height="30">
+	<p class="center"><strong>Skyblock Level:</strong> {{ leveling_data["Global"]["xp"] / 100 }}</p>
+</div>
 
-	<p class="center"><img src="{{ leveling_data["Global"]["icon_path"] }}" alt="{{ skill }} Icon" width="30" height="30"><strong>Skyblock Level:</strong> {{ leveling_data["Global"]["xp"] / 100 }}</p>
 {% else %}
+<div class="icon-text">
+	<img src="/images/Skyblock_Levels.webp" alt="{{ skill }} Icon" width="30" height="30">
 	<p class="center"><strong>Skyblock Level:</strong> -</p>
+</div>
 {% endif %}
 </div>
 
 <div id="skills-stats" class="red-border stats-div">
 	<h2 class="section-title center">Skills & Level</h2>
 {% if leveling_data != None %}
-	<img src="{{ leveling_data["Global"]["icon_path"] }}" alt="{{ skill }} Icon" width="30" height="30">
-	<h2 id="sb-level" class="title">Skyblock Level: {{ leveling_data["Global"]["xp"] / 100 }}</h2>
+	<div class="icon-text">
+		<img src="{{ leveling_data["Global"]["icon_path"] }}" alt="{{ skill }} Icon" width="30" height="30">
+		<h2 id="sb-level" class="title">Skyblock Level: {{ leveling_data["Global"]["xp"] / 100 }}</h2>
+	</div>
 	{% for skill in leveling_data %}
 		{% if skill != "Global" %}
+		<div class="icon-text">
 			<img src="{{ leveling_data[skill]["icon_path"] }}" alt="{{ skill }} Icon" width="30" height="30">
 			<p id="{{ skill.lower() }}-info" class="skills-info">
 				<strong>{{ skill | replace("2", "") }} :</strong> {{ leveling_data[skill]["xp"] }} EXP
 			</p>
+		</div>
 		{% endif %}
 	{% endfor %}
 {% else %}
@@ -55,7 +65,7 @@
 	<div id="slayer-cards">
 	{% for boss in slayer_data %}
 		<div id="{{ boss.lower() }}" class="slayer-boss-div center">
-			<div id="slayer-title-container">
+			<div id="slayer-title-container" class="icon-text">
 				<img src="{{ slayer_data[boss]["icon_path"] }}" alt="{{ boss.lower().capitalize() }} Icon" width="30" height="30">
 				<h3 class="{{ boss.lower() }}-boss-level boss-title center">
 					{{ boss }} - LVL {{ slayer_data[boss]["current_level"] }}
@@ -146,7 +156,10 @@
 	<div id="trophy-fish-count" class="red-border">
 		{% for trophy in trophy_data[0] %}
 			<div id="{{ trophy.keys() | first }}-summary" class="fish-card">
-				<h3 id="{{ trophy.keys() | first }}-title" class="center">{{ trophy.keys() | first }}</h3>
+				<div class="icon-text">
+					<img src="{{ trophy['icon_path'] | replace(" ", "_") }}" alt="{{ trophy.keys() | first }} Icon" width="30" height="30">
+					<h3 id="{{ trophy.keys() | first }}-title" class="center">{{ trophy.keys() | first }}</h3>
+				</div>
 				<div class="trophy-count">
 					{% for fish_rarity in trophy[trophy.keys() | first] %}
 						<p><strong>{{ fish_rarity}}</strong>: {{ trophy[trophy.keys() | first][fish_rarity] }}</p>
