Changed duplicate id for a class. Styling slayer card (added margin)

--- a/templates/assets/stylesheet/style.css
+++ b/templates/assets/stylesheet/style.css
@@ -252,6 +252,10 @@ footer {
     margin: 2.5% 10% 1.5%;
 }
 
+.slayer-title-container {
+    margin-top: 5px;
+}
+
 #unlocked-timecharms {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
