fix: Added a tooltip the first join date (specifying the date format)

--- a/templates/assets/stylesheet/style.css
+++ b/templates/assets/stylesheet/style.css
@@ -235,7 +235,7 @@ footer {
     line-height: 1.6;
     text-align: left;
     white-space: nowrap;
-    transform: translate(-50%, 1em);
+    transform: translate(-50%, 14pt);
     transition: all .15s ease-in-out;
 }
 
