--- a/templates/stats.html
+++ b/templates/stats.html
@@ -16,7 +16,12 @@
 	<div class="flex-wrapper">
 		<img id="main-skin-img" src="{{ skin_link }}" width="128" height="128" alt="{{ player_name }}">
 	</div>
-	<h2 class="center white-text">{{ player_name }}</h2>
+	<h2 class="center white-text">
+        {% if rank != "None" %}
+        	[{{ rank }}]
+        {% endif %}
+        {{ player_name }}
+    </h2>
 {% if misc_data != None %}
 	<div class="flex-wrapper">
     <p class="center tooltip-container" data-tooltip="Format: YYYY-dd-MM hh:mm:ss">
