--- a/templates/stats.html
+++ b/templates/stats.html
@@ -21,7 +21,9 @@
         	<span style="color: {{ rank_data['color'] }}">{{ rank_data['rank'] }}</span>
         {% endif %}
         {% if leveling_data != None %}
-        	[<span style="color: {{ leveling_data["Global"]["color"] }}">{{ (leveling_data["Global"]["xp"] / 100) | int }}</span>]
+            <span style="color: #3f3f3f">[</span>
+            <span style="color: {{ leveling_data["Global"]["color"] }}">{{ (leveling_data["Global"]["xp"] / 100) | int }}</span>
+            <span style="color: #3f3f3f">]</span>
         {% endif %}
         {{ player_name }}
     </h2>
