feat: Added a page for information (legals, data, credits, about...)

--- a/templates/home.html
+++ b/templates/home.html
@@ -50,7 +50,7 @@
 </div>
 <footer>
 	<div class="flex-wrapper">
-		<a href="">About your data</a>
+		<a href="/info">More information</a>
 	</div>
 </footer>
 </body>
