fix: Added a credit to the Hypixel wiki

--- a/templates/info.html
+++ b/templates/info.html
@@ -34,6 +34,8 @@
             <li class="white-text">Chris Bracco - Some CSS code (<a href="https://chrisbracco.com/" target="_blank">website</a>)</li>
             <li class="white-text">Zahkthar - Some Python code (<a href="https://zahkthar.fr" target="_blank">website</a>)</li>
         </ul>
+        <br>
+        <p class="white-text">Most of the icons are from the <a href="https://wiki.hypixel.net" target="_blank">Hypixel Skyblock wiki</a>.</p>
     </div>
     <br>
     <div id="legal" class="blurry-bg info-div">
