fix(info): Added a legal mention about the Hypixel Network

--- a/templates/assets/stylesheet/style.css
+++ b/templates/assets/stylesheet/style.css
@@ -352,6 +352,8 @@ footer {
     border-radius: 5px;
     padding-right: 10%;
     padding-left: 10%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 #credits-list {
