--- a/templates/info.html
+++ b/templates/info.html
@@ -20,6 +20,8 @@
             and that you can contribute to make this project better !
         </p>
         <br>
+        <p class="white-text">This website is not affiliated with the Hypixel Network</p>
+        <br>
         <p class="white-text">If you find a bug, you can report it by opening an
             <a href="https://github.com/TheRealGabHas/SkyblockStats/issues/" target="_blank">issue</a>
             on the GitHub repository.
